# LabPulse

./: .gitignore  README  dashboard.py  main.py  pyproject.toml
.github/workflows/: tests.yml
data/processed/: alerts_outliers_iqr.csv  outliers_iqr.csv  samples_cleaned.csv
data/raw/: samples.csv
notebooks/: 01_load_and_audit.ipynb  02_cleaning.ipynb  03_analysis.ipynb
notebooks/_archive/: 03_analysis_old.ipynb
src/labpulse/: alerts.py  cleaning.py  io_utils.py  pipeline.py  qc_rules.py
src/labpulse/api/: main.py
tests/: test_api.py  test_cleaning.py  test_io_utils.py  test_outliers.py  test_pipeline.py  test_qc_rules.py
