[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labpulse"
version = "0.1.0"
description = "Laboratory QC and alerting toolkit"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
dashboard = ["streamlit", "requests", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]